--- a/album/templates/album/web/components/music_select.html
+++ b/album/templates/album/web/components/music_select.html
@@ -29,7 +29,7 @@
              :key="tag.id"
              v-on:tap="tagMusicTag(tag)"
              v-for="tag in musicTags">
-            {{ musicTag.name }}
+            {{ tag.name }}
         </v-touch>
     </div>
     <div class="weui-search-bar" id="searchBar">
