--- a/album/templates/album/web/components/template_select.html
+++ b/album/templates/album/web/components/template_select.html
@@ -49,7 +49,7 @@
                  :key="tag.id"
                  v-on:tap="tagTemplateTag(tag)"
                  v-for="tag in templateTags">
-            {{ templateTag.name }}
+            {{ tag.name }}
         </v-touch>
     </div>
     <div class="template-list row mx-0">
